# merlin

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pytest.ini  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
docs/: Makefile  requirements.txt
docs/multiversion_config/: conf.py
docs/source/: conf.py  index.rst  references.bib
docs/source/_static/css/: style.css
docs/source/_templates/: page.html
docs/source/notebooks/: QLLM_fine_tuning.ipynb  Train_img2img_turbo.ipynb  VQC_implementation.ipynb  expressive_power_of_the_VQC.ipynb  gaussian_kernel_with_quantum.ipynb  hqnn_spiral.ipynb  index.rst  iris_classification.ipynb  quantum_reservoir.ipynb  quantum_reservoir_in_testing.ipynb  quantum_reservoir_pcvl_in_testing.ipynb
docs/source/notebooks/img2img_turbo_annotations/: .test_checkpoints.py.swp  requirements.txt
docs/source/notebooks/results/: quantum_llm_finetuning_results.json
docs/source/quickstart/: basic_concepts.rst  first_quantum_layer.rst  index.rst  installation.rst  other_circuits.rst
docs/source/reference/: index.rst  performance.rst
docs/source/reference/api/: merlin.core.ansatz.rst  merlin.core.base.rst  merlin.core.generators.rst  merlin.core.layer.rst  merlin.core.photonicbackend.rst  merlin.core.rst  (+20 more)
docs/source/research/: architectures.rst  building_intuition.rst  index.rst  reproduced_papers.rst
docs/source/user_guide/: circuit_types.rst  encoding.rst  hybrid_models.rst  index.rst  output_mappings.rst
merlin/: __init__.py
merlin/core/: __init__.py  ansatz.py  base.py  generators.py  layer.py  photonicbackend.py  process.py
merlin/datasets/: __init__.py  iris.py  metadata.py  mlp_model.py  mnist_digits.py  spiral.py  utils.py
merlin/pcvl_pytorch/: __init__.py  locirc_to_tensor.py  slos_torchscript.py
merlin/sampling/: __init__.py  autodiff.py  mappers.py  process.py  strategies.py
merlin/torch_utils/: __init__.py  torch_codes.py
tests/: benchmark_unitary_conversion.py  memory_benchmark.py  test_build_unitary_graph.py  test_cuda.py  test_layer.py  test_locirc_to_torch.py  test_no_bunching.py  test_output.py  test_robustness.py  test_sampling.py  test_simple_input.py  test_slos_computegraph.py  test_superposition_state.py
(+20 files in other folders)
